--- a/common/footer.html
+++ b/common/footer.html
@@ -8,6 +8,7 @@
 			      <li><a href="#/home">Homepage</a></li>
 			      <li><a href="#/credentials">Credentials</a></li>
 			      <li><a href="#/confidentiality">Confidentiality</a></li>      
+			      <li><a href="#/contacts">Contacts</a></li>      
 			    </ul>
 		    </div>
 			<div class="col-sm-8">
