--- a/common/heading.html
+++ b/common/heading.html
@@ -9,7 +9,7 @@
 		    </div>
 			<div class="col-sm-7">
 				<div class="headingright">
-			    	<div class="left heading-icon"><i class="fa fa-cog"></i></div>
+			    	<div class="left heading-icon"><i class="fa fa-certificate"></i></div>
 			    	<div class="nowrap">Change your thoughts. Change your life</div>
 			    	<div class="nowrap">call now <strong>0410 867 770</strong></div>
 			    	<div class="clear"></div>
@@ -35,6 +35,7 @@
 		</li>
       <li><a href="#/credentials">Credentials</a></li>
       <li><a href="#/confidentiality">Confidentiality</a></li>      
+      <li><a href="#/contacts">Contacts</a></li>      
     </ul>
   </div>
 </nav>
