--- a/index.html
+++ b/index.html
@@ -1,60 +1,49 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en" ng-app="myApp" class="no-js"> <!--<![endif]-->
+<!DOCTYPE HTML>
+<html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>DrivEnable OT Services</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
-  <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">  
-  <link rel="stylesheet" href="bower_components/fontawesome/css/font-awesome.min.css">
-  <link rel="stylesheet" href="app.css">  
-  <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        p {
+            text-align: center;
+            font-size: 60px;
+            margin-top: 0px;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <div class="toggle" ng-include="'common/heading.html'"></div>
-  </header>
 
+    <p id="demo"></p>
 
-  <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]-->
+    <script>
+// Set the date we're counting down to
+var countDownDate = new Date("July 18, 2018 12:00:00").getTime();
 
-  <div ng-view></div>
+// Update the count down every 1 second
+var x = setInterval(function() {
 
-  <footer>
-    <div ng-include="'common/footer.html'"></div>
-  </footer>
+    // Get todays date and time
+    var now = new Date().getTime();
 
-  <!-- In production use:
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
-  -->
-  <script src="bower_components/jquery/dist/jquery.min.js"></script>  
-  <script src="bower_components/angular/angular.min.js"></script>
-  <script src="bower_components/angular-route/angular-route.min.js"></script>  
+    // Find the distance between now an the count down date
+    var distance = countDownDate - now;
 
-  <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="app.js"></script>
-  <script src="home/home.js"></script>
-  <script src="view2/view2.js"></script>
-  <script src="homeassesment/homeassesment.js"></script>
-  <script src="drivingassesment/drivingassesment.js"></script>
-  <script src="psychologicalstrategies/psychologicalstrategies.js"></script>
-  <script src="injuries/injuries.js"></script>
-  <script src="disability/disability.js"></script>
+    // Time calculations for days, hours, minutes and seconds
+    var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+    var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+    var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+    var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
-  <script src="credentials/credentials.js"></script>
-  <script src="confidentiality/confidentiality.js"></script>
-  <script src="contacts/contacts.js"></script>
+    // Output the result in an element with id="demo"
+    document.getElementById("demo").innerHTML = "In this site will rise something amazing in <br/>" + days + "d " + hours + "h "
+    + minutes + "m " + seconds + "s ";
 
-  <script src="components/version/version.js"></script>
-  <script src="components/version/version-directive.js"></script>
-  <script src="components/version/interpolate-filter.js"></script>
+    // If the count down is over, write some text
+    if (distance < 0) {
+        clearInterval(x);
+        document.getElementById("demo").innerHTML = "EXPIRED";
+    }
+}, 1000);
+    </script>
+
 </body>
 </html>
